@@ -2,6 +2,18 @@
 # arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.7
 #
 
+2005-03-04 12:56:36 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-34
+
+    Summary:
+      catalog, fix profile and benchmark script
+    Revision:
+      itools--main--0.7--patch-34
+
+
+    modified files:
+     Changelog catalog/prof.py
+
+
 2005-03-03 13:29:26 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-33
 
     Summary:
